syntax = "proto3";
import "GoIM/pkg/proto/sdk_ws/ws.proto";
option go_package = "./msg;msg";
package msg;

message SendMsgReq {
string token =1;
string operationID = 2;
server_api_params.MsgData msgData = 3;
}

message SendMsgResp {
  int32 errCode = 1;
  string errMsg = 2;
  string serverMsgID = 4;
  string clientMsgID = 5;
  int64  sendTime = 6;
}
message MsgDataToDB {
  server_api_params.MsgData msgData = 1;
  string operationID = 2;

}
service msg {
  rpc SendMsg(SendMsgReq) returns(SendMsgResp);
}
