syntax = "proto3";
import "GoIM/pkg/proto/sdk_ws/ws.proto";
option go_package = "./relay;pbRelay";
package relay;

message OnlinePushMsgReq {
  string OperationID = 1;
  server_api_params.MsgData msgData = 2;
  string pushToUserID = 3;
}
message OnlinePushMsgResp{
repeated SingleMsgToUserPlatform resp = 1;
}

message SingleMsgToUserPlatform{
  int64   ResultCode = 1;
  string  RecvID = 2;
  int32   RecvPlatFormID = 3;
}
service relay {
  rpc OnlinePushMsg(OnlinePushMsgReq) returns(OnlinePushMsgResp);
}

